Created record to draw the world.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
   <body>
 		<h1>Clojurescript Game Of Life</h1>
     <script type="text/javascript" src="game_of_life.js"></script>
-    <pre id="pre">
-      void
+    <pre id="ascii" style="display: none;">
     </pre>
-    <canvas id="surface" width="200" height="200">
-      Your browser does not support HTML5 Canvas.
-    </canvas>
     <div id="graphics"/>
     <script>
       game_of_life.core.init();
