Added Unit-Tests and identified defective functions.

--- a/index-dev.html
+++ b/index-dev.html
@@ -9,11 +9,10 @@
     <script type="text/javascript">
       goog.require('game_of_life.core');
     </script>
-
-    <pre id="ascii" style="display: none;">
-    </pre>
     <div id="graphics"/>
+    <p id="ascii" style="font-family: 'Courier New', Courier, monospace;"></p>
     <script type="text/javascript">
+      game_of_life.core.test();
       game_of_life.core.init();
     </script>
   </body>
