Added more unit-tests.

--- a/index-dev.html
+++ b/index-dev.html
@@ -10,7 +10,7 @@
       goog.require('game_of_life.core');
     </script>
     <div id="graphics"/>
-    <p id="ascii" style="font-family: 'Courier New', Courier, monospace;"></p>
+    <p id="ascii" style="font-size: 8pt; font-family: 'Courier New', Courier, monospace;"></p>
     <script type="text/javascript">
       game_of_life.core.test();
       game_of_life.core.init();
